update pyproject.toml file and .gitignore
now require python >= 3.11  (import of StrEnum)
no longer need pydantic
add missing dependency on typing_extensions (version required ?)

add a section to configure pylint. For now, just increase
max line length and suppress warnings about missing docstrings.
We can come back to those later.

Move mypy config from setup.cfg to pyproject.toml assuming
that is the direction of travel.

Ignore emacs backup files *~

--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,11 @@
 .AppleDouble
 .LSOverride
 
-# Byte-compiled / optimized / DLL files
+# Byte-compiled / optimized / DLL / backup files
 __pycache__/
 *.py[cod]
 *$py.class
+*~
 
 # C extensions
 *.so
